option java_outer_classname="WriteQueryResponseProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message WriteQueryResponse 
{
	optional int64 affectedDocuments = 1;
}
